fixing product and category
fixing data product and category in filament

--- a/lang/id.json
+++ b/lang/id.json
@@ -7,7 +7,7 @@
     "Description": "Deskripsi",
     "Quantity": "Kuantitas",
     "Published": "Diterbitkan",
-    "InStock": "Tersedia",
+    "Available": "Tersedia",
     "Price": "Harga",
     "Updated_by": "Diperbarui Oleh",
     "Name": "Nama",
