feat: api address
new api for address user

--- a/lang/id.json
+++ b/lang/id.json
@@ -10,6 +10,7 @@
     "Published": "Diterbitkan",
     "Available": "Tersedia",
     "Price": "Harga",
+    "Weight": "Berat",
     "Updated_by": "Diperbarui Oleh",
     "Name": "Nama",
     "Display_order": "Urutan Tampil",
